--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -10,7 +10,11 @@
       {% else %}
         {% assign redirect = page.redirect | relative_url %}
       {% endif %}
-      <meta http-equiv="refresh" content="3; url={{ redirect }}">
+      {% if page.redirect contains '://' %}
+        <meta http-equiv="refresh" content="0; url={{ redirect }}">
+      {% else %}
+        <meta http-equiv="refresh" content="3; url={{ redirect }}">
+      {% endif %}
     {% endif %}
     {% include head.liquid %}
   </head>
